--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "express-flash": "^0.0.2",
+    "express-session": "^1.18.1",
     "hbs": "^4.2.0",
     "multer": "^2.0.0",
     "nodemon": "^3.1.10",
